# dancing-links-and-planning-pokemon

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md
.github/workflows/: webapp.yaml
dancing-links-and-planning-pokemon/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  output.txt
dancing-links-and-planning-pokemon/data/dst/: Gen-7-AlolaUltra.dst
dancing-links-and-planning-pokemon/data/json/: all-maps.json  gen-6-types.json  gen-8-types.json
dancing-links-and-planning-pokemon/demos/: CMakeLists.txt  MapParser.cpp  MapParser.h  PokemonGUI.cpp  PokemonParser.cpp  map_parser.cc  map_parser.hh  pokemon_cli.cc  pokemon_gui.cc  pokemon_parser.cc  pokemon_parser.hh
dancing-links-and-planning-pokemon/dlapp/: DancingLinks.h  DancingLinksAndPlanningPokemon.pro  PokemonLinks.cpp  PokemonLinks.h  Resistance.cpp  Tests.cpp  TypeEncoding.cpp  TypeEncoding.h  TypeResistance.h
dancing-links-and-planning-pokemon/dlapp/Data/: readme.md
dancing-links-and-planning-pokemon/dlapp/Data/dst/: Gen-1-Kanto.dst  Gen-2-Johto.dst  Gen-6-Kalos.dst
dancing-links-and-planning-pokemon/dlapp/Demos/: GUIConfig.h  MapParser.cpp  MapParser.h  PokemonGUI.cpp  PokemonParser.cpp  PokemonParser.h
dancing-links-and-planning-pokemon/dlapp/Src/: PokemonLinks.cpp  PokemonLinks.h  RankedSet.h  Resistance.cpp  Resistance.h  TypeEncoding.cpp
dancing-links-and-planning-pokemon/dlapp/Tests/: Tests.cpp
dancing-links-and-planning-pokemon/dlapp/Utilities/: RankedSet.h  Resistance.cpp  Resistance.h
dancing-links-and-planning-pokemon/dlapp/res/: readme.md
dancing-links-and-planning-pokemon/dlapp/res/dst/: Gen-4-Sinnoh.dst  Gen-5-Unova2.dst  Gen-7-AlolaUltra.dst  Gen-8-Galar.dst  Kanto.dst  Sinnoh.dst
dancing-links-and-planning-pokemon/dlapp/res/json/: all-maps.json  all-types.json  gen-1-types.json  gen-2-types.json  gen-3-types.json  gen-4-types.json  gen-5-types.json  gen-7-types.json  gen-9-types.json
dancing-links-and-planning-pokemon/etc/: cflags.cmake  scanners.cmake
dancing-links-and-planning-pokemon/gui/: CMakeLists.txt  point.cc  point.hh  quad.cc  quad.hh  shader.cc  shader.hh  triangle.cc  triangle.hh  util.hh  vertex.cc  vertex.hh  window.cc  window.hh
dancing-links-and-planning-pokemon/gui/frag/: basic.frag
dancing-links-and-planning-pokemon/src/: CMakeLists.txt  dancing_links.cc  dancing_links.hh  map_parser.cc  point.cc  pokemon_links.cc  pokemon_links.hh  pokemon_parser.cc  ranked_set.cc  ranked_set.hh  resistance.cc  resistance.hh  type_encoding.cc  type_encoding.hh  type_resistance.hh
dancing-links-and-planning-pokemon/tests/: CMakeLists.txt  tests.cc
data/: README.md  readme.md
data/dst/: Gen-3-Hoenn.dst  Gen-7-AlolaUltra.dst  Gen-9-Paldea.dst
data/json/: all-maps.json  types-introduced-by-gen.json
data/maps/: all-maps.json  gen-1-kanto.json  gen-2-johto.json  gen-3-hoenn.json  gen-4-sinnoh.json  gen-5-unova.json  gen-6-kalos.json  gen-7-alola.json  gen-8-galar.json  gen-9-paldea.json
data/types/: gen-1-types.json  gen-2-types.json  gen-3-types.json  gen-4-types.json  gen-5-types.json  gen-6-types.json  gen-7-types.json  gen-8-types.json  gen-9-types.json
demos/: CMakeLists.txt  old_pokemon_gui.hide_cc  pokemon_cli.cc  pokemon_gui.cc
etc/: scanners.cmake
gui/: CMakeLists.txt  gui.cc  point.cc  quad.cc  quad.hh  shader.hh  triangle.cc  triangle.hh  util.hh  vertex.cc  vertex.hh
gui/vert/: basic.vert
html/: shell.html
src/: CMakeLists.txt  dancing_links.cc  map_parser.cc  pokemon_links.cc  pokemon_parser.cc  ranked_set.cc  resistance.cc  type_encoding.cc
tests/: CMakeLists.txt  tests.cc
